# roast

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  code_of_conduct.md
docs/: docs.adoc
roast/: Cargo.toml
roast/src/: build.rs  convert.rs  lib.rs
roast_cli/: Cargo.toml  README.md  build.rs
roast_cli/src/: main.rs
roast_cli/templates/maven/: .gitignore.in  Cargo.toml.in  build.rs.in  pom.xml.in
roast_cli/templates/maven/src/: lib.rs.in
roast_cli/templates/maven/src/test/java/: HelloWorldTest.java.in
roast_derives/: Cargo.toml
roast_derives/src/: entity.rs  lib.rs
roast_testlab/: .gitignore  Cargo.toml  build.rs  pom.xml  roast.json
roast_testlab/src/: lib.rs
roast_testlab/src/main/java/: Primitive.java  Strings.java
roast_testlab/src/main/resources/: libroast_testlab.dylib
roast_testlab/src/test/java/: ArraysTest.java  PrimitiveTest.java  StringsTest.java
