[package]
name = "roast_cli"
version = "0.1.0"
authors = ["Michael Nitschinger <michael@nitschinger.at>"]
description = "Artisan roasted Java for your coding pleasure"
license = "Apache-2.0"
edition = "2018"
build = "build.rs"
include = ["/templates/*"]

[[bin]]
name = "roast"
path = "src/main.rs"

[dependencies]
structopt = "0.2"
roast = { version = "0.1", path = "../roast" }
loggerv = "0.7"
log = "0.4"
git2 = "0.10"
phf = "0.7"
includedir = "0.5"

[build-dependencies]
includedir_codegen = "0.5"
