[package]
name = "roast_cli"
version = "0.1.0"
authors = ["Michael Nitschinger <michael@nitschinger.at>"]
description = "Artisan roasted Java for your coding pleasure"
license = "Apache-2.0"
edition = "2021"
build = "build.rs"
include = ["/templates/*"]

[[bin]]
name = "roast"
path = "src/main.rs"

[dependencies]
structopt = "0.3"
clap = { version = "2.33", default-features = false }

roast = { version = "0.1", path = "../roast" }
loggerv = "0.7"
log = "0.4"
git2 = "0.16"
phf = "0.8"
includedir = "0.6"

[build-dependencies]
includedir_codegen = "0.6"
