[package]
name = "roast_derives"
version = "0.1.0"
authors = ["Michael Nitschinger <michael@nitschinger.at>"]

[dependencies]
syn = { version = "0.14", features = ["full", "extra-traits"] }
quote = "0.6"
walkdir = "2.1"
proc-macro2 = "0.4"
failure = "0.1"
itertools = "0.7"
Inflector = "0.11"

[lib]
proc-macro = true