[package]
name = "roast_derives"
version = "0.1.0"
authors = ["Michael Nitschinger <michael@nitschinger.at>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
walkdir = "2.3"
proc-macro2 = "1.0"
failure = "0.1"
itertools = "0.10"
Inflector = "0.11"

[lib]
proc-macro = true
